--- a/.htaccess
+++ b/.htaccess
@@ -53,6 +53,9 @@ ErrorDocument 404 /404.html
   ExpiresByType application/javascript "access plus 1 year"
   ExpiresByType text/javascript "access plus 1 year"
 
+  # Text files (Next.js internal files)
+  ExpiresByType text/plain "access plus 1 year"
+
   # Images
   ExpiresByType image/png "access plus 1 year"
   ExpiresByType image/jpeg "access plus 1 year"
@@ -81,7 +84,7 @@ ErrorDocument 404 /404.html
 
 <IfModule mod_headers.c>
   # dlouha cache pro staticke soubory
-  <FilesMatch "\.(css|js|png|jpg|jpeg|webp|avif|svg|ico|gif|woff|woff2|ttf|otf|mp4|webm)$">
+  <FilesMatch "\.(css|js|png|jpg|jpeg|webp|avif|svg|ico|gif|woff|woff2|ttf|otf|mp4|webm|txt)$">
     Header set Cache-Control "public, max-age=31536000, immutable"
   </FilesMatch>
 
