--- a/.htaccess
+++ b/.htaccess
@@ -1,42 +1,29 @@
-# htaccess rules for subdomains and aliases
-# to create new subdomain, create a folder www/subdom/(subdomain name)
-# to create web for alias, create a folder www/domains/(whole domain name)
-
-# htaccess pravidla pro subdomeny a samostatne weby aliasu
-# pro vytvoreni subdomeny vytvorte adresar www/subdom/(nazev subdomeny)
-# pro vytvoreni webu pro alias vytvorte adresar www/domains/(cely domenovy nazev)
-# dalsi info a priklady: https://kb.wedos.com/cs/webhosting/htaccess/htaccess-na-webhostingu
-
 RewriteEngine On
-# presmerovani na https
-RewriteCond %{HTTPS} !=on
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# presmerovani z www.dejvcodes.com na dejvcodes.com
+# 1) Canonical: www.dejvcodes.com -> dejvcodes.com (rovnou na https)
 RewriteCond %{HTTP_HOST} ^www\.dejvcodes\.com$ [NC]
-RewriteRule ^(.*)$ https://dejvcodes.com/$1 [L,R=301]
+RewriteRule ^ https://dejvcodes.com%{REQUEST_URI} [R=301,L]
 
-# cele domeny (aliasy)
-RewriteCond %{REQUEST_URI} !^domains/
-RewriteCond %{REQUEST_URI} !^/domains/
-RewriteCond %{HTTP_HOST} ^(www\.)?(.*)$
+# 2) Force HTTPS pro vše ostatní
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+# 3) Cele domeny (aliasy) -> /domains/<whole-host>/
+RewriteCond %{REQUEST_URI} !^/domains/ [NC]
+RewriteCond %{HTTP_HOST} ^(www\.)?(.+)$ [NC]
 RewriteCond %{DOCUMENT_ROOT}/domains/%2 -d
-RewriteRule (.*) domains/%2/$1 [DPI]
+RewriteRule ^(.*)$ domains/%2/$1 [DPI,L]
 
-# subdomeny (s nebo bez www na zacatku)
-RewriteCond %{REQUEST_URI} !^subdom/
-RewriteCond %{REQUEST_URI} !^/subdom/
-RewriteCond %{HTTP_HOST} ^(www\.)?(.*)\.([^\.]*)\.([^\.]*)$
+# 4) Subdomeny -> /subdom/<subdomain>/
+RewriteCond %{REQUEST_URI} !^/subdom/ [NC]
+RewriteCond %{HTTP_HOST} ^(www\.)?([^.]+)\.[^.]+\.[^.]+$ [NC]
 RewriteCond %{DOCUMENT_ROOT}/subdom/%2 -d
-RewriteRule (.*) subdom/%2/$1 [DPI]
+RewriteRule ^(.*)$ subdom/%2/$1 [DPI,L]
 
-# aliasy - spravne presmerovani pri chybejicim /
+# 5) Trailing slash pro adresare (obecne)
 RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^domains/[^/]+/(.+[^/])$ /$1/ [R]
-
-# subdomeny - spravne presmerovani pri chybejicim /
-RewriteCond %{REQUEST_FILENAME} -d
-RewriteRule ^subdom/[^/]+/(.+[^/])$ /$1/ [R]
+RewriteCond %{REQUEST_URI} !/$
+RewriteRule ^ %{REQUEST_URI}/ [R=301,L]
 
 # error page
 ErrorDocument 404 /404.html
@@ -53,19 +40,11 @@ ErrorDocument 404 /404.html
 # BROWSER CACHING
 <IfModule mod_expires.c>
   ExpiresActive On
-
-  # HTML - no-cache (vzdy kontroluj server)
   ExpiresByType text/html "access plus 0 seconds"
-
-  # CSS + JS
   ExpiresByType text/css "access plus 1 year"
   ExpiresByType application/javascript "access plus 1 year"
   ExpiresByType text/javascript "access plus 1 year"
-
-  # Text files (Next.js internal files)
   ExpiresByType text/plain "access plus 1 year"
-
-  # Images
   ExpiresByType image/png "access plus 1 year"
   ExpiresByType image/jpeg "access plus 1 year"
   ExpiresByType image/jpg "access plus 1 year"
@@ -74,36 +53,27 @@ ErrorDocument 404 /404.html
   ExpiresByType image/svg+xml "access plus 1 year"
   ExpiresByType image/x-icon "access plus 1 year"
   ExpiresByType image/gif "access plus 1 year"
-
-  # Fonts
   ExpiresByType font/woff2 "access plus 1 year"
   ExpiresByType font/woff "access plus 1 year"
   ExpiresByType font/ttf "access plus 1 year"
   ExpiresByType font/otf "access plus 1 year"
-  ExpiresByType application/font-woff2 "access plus 1 year"
-  ExpiresByType application/font-woff "access plus 1 year"
-
-  # JSON
   ExpiresByType application/json "access plus 1 hour"
-
-  # Video
+  ExpiresByType application/manifest+json "access plus 1 hour"
   ExpiresByType video/mp4 "access plus 1 year"
   ExpiresByType video/webm "access plus 1 year"
 </IfModule>
 
 <IfModule mod_headers.c>
-  # dlouha cache pro staticke soubory
-  <FilesMatch "\.(css|js|png|jpg|jpeg|webp|avif|svg|ico|gif|woff|woff2|ttf|otf|mp4|webm|txt)$">
+  # dlouha cache pro statiku (doporučuju vyhodit txt)
+  <FilesMatch "\.(css|js|png|jpg|jpeg|webp|avif|svg|ico|gif|woff|woff2|ttf|otf|mp4|webm)$">
     Header set Cache-Control "public, max-age=31536000, immutable"
   </FilesMatch>
 
-  # HTML - no-cache (vzdy kontroluj server)
   <FilesMatch "\.(html)$">
     Header set Cache-Control "no-cache, must-revalidate"
   </FilesMatch>
 
-  # JSON
-  <FilesMatch "\.(json)$">
+  <FilesMatch "\.(json|webmanifest)$">
     Header set Cache-Control "public, max-age=3600"
   </FilesMatch>
 </IfModule>
